@@ -1,3 +1,5 @@
+[add]
+template_directory = t
 [add "variables"]
 foo = bar
 baz = hi
